@@ -1,3 +1,9 @@
+2008-08-27 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b15
+
+ * Fix: Gallery works now in turkish! HOOORAY !
+
+   Thanks to katpatuka for fixing this LOONG outstanding bug.
+
 2008-08-26 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b14
 
  * Fix: Removing album permission broken.
